static/input.css
@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");

@import "tailwindcss";
@plugin "@tailwindcss/typography";
@source "../views/**/*.templ";

@theme {
    --font-sans: "Plus Jakarta Sans", sans-serif;
    --color-canvas: #1f2937; /* gray-800  — bg-bg      */
    --color-surface: #1b1f22; /* gray-900  — bg-surface  */
    --color-border: #4b5563; /* gray-600  — border-border */
    --color-text: #f3f4f6; /* gray-100  — text-text   */
    --color-muted: #9ca3af; /* gray-400  — text-muted  */
    --color-accent: #ff5964; /* indigo-400 — bg-accent  */
}

@view-transition {
    navigation: auto;
}

::view-transition-old(root),
::view-transition-new(root) {
    animation: none;
}

.settings-entry {
    opacity: 1;
    transform: translateY(0);
    transition:
        opacity 0.2s ease-out,
        transform 0.2s ease-out;
    @starting-style {
        opacity: 0;
        transform: translateY(-20px);
    }
}

@layer base {
    html {
        @apply scrollbar-gutter-stable scroll-smooth;
    }

    body {
        @apply bg-canvas text-text tracking-wide;
    }

    header {
        @apply fixed top-0 inset-x-0 z-50 bg-surface border-b border-border h-16;
    }

    footer {
        @apply flex justify-center items-center py-5 bg-surface border-t border-border;
    }

    nav {
        @apply flex gap-1 items-center;
    }

    /*nav a {
        @apply text-muted hover:text-text transition-colors;
    }*/

    section {
        @apply max-w-6xl mx-auto min-h-screen py-28 px-8;
    }

    h1 {
        @apply text-accent text-8xl mb-5;
    }

    h2 {
        @apply text-accent text-5xl mb-8;
    }

    h3 {
        @apply text-accent text-2xl my-2;
    }

    h4 {
        @apply text-2xl mb-3;
    }

    h5 {
        @apply text-sm text-muted;
    }

    p {
        @apply text-lg text-muted mb-1;
    }

    a {
        @apply hover:text-accent;
    }

    hr {
        @apply border-accent my-4 pb-2;
    }

    table {
        @apply w-full text-sm;
    }
    thead {
        @apply border-y border-border text-left text-muted;
    }

    th {
        @apply px-4 py-3 font-medium tracking-wide uppercase text-xs cursor-pointer hover:text-text;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%239ca3af' d='M6 8L1 3h10z'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-position: right 0.9rem center;
    }
    td {
        @apply px-4 py-3 border-b border-border/50;
    }

    tbody tr {
        @apply text-muted hover:text-text hover:bg-accent/10 transition-all relative;
    }

    select {
        @apply bg-canvas text-muted text-sm rounded px-3 py-2 pr-8 cursor-pointer;
        @apply hover:text-text focus:outline-none focus:border-none transition-all;
        appearance: none;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%239ca3af' d='M6 8L1 3h10z'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-position: right 0.9rem center;
    }
}

@layer components {
    .content-width {
        @apply max-w-6xl mx-auto px-8;
    }

    .grid-1 {
        @apply grid grid-cols-1 gap-x-4 gap-y-1;
    }

    .grid-2 {
        @apply grid grid-cols-2 gap-x-4 gap-y-1;
    }

    .grid-3 {
        @apply grid grid-cols-3 gap-x-4 gap-y-1;
    }

    .grid-4 {
        @apply grid grid-cols-4 gap-x-4 gap-y-1;
    }
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-thumb {
    border-radius: 6px;
    background: linear-gradient(transparent, #ff5964);
    /*background: #ff5964;*/
}

